# fraction_list_fmt_align

./: Cargo.toml  README.md
.github/workflows/: dependabot-auto-merge.yml  rust.yml
examples/: example.rs
src/: lib.rs
